[gd_scene format=4 uid="uid://gx6ccwi5x05c"]

[ext_resource type="Script" uid="uid://btgsa72vutwtq" path="res://scenes/level.gd" id="1_mx8sn"]
[ext_resource type="TileSet" uid="uid://cmvh0wonvdala" path="res://tile_set.tres" id="1_w7c3h"]
[ext_resource type="PackedScene" uid="uid://dyr2cfy1oky2m" path="res://scenes/killzone.tscn" id="3_mx8sn"]
[ext_resource type="PackedScene" uid="uid://dhs4d263pp1ak" path="res://user_interface/game_ui.tscn" id="3_w8frs"]
[ext_resource type="PackedScene" uid="uid://d3ok4ks5wpafs" path="res://scenes/level_goal.tscn" id="5_dxsyt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mx8sn"]

[node name="LevelParent" type="Node" unique_id=671481730]
script = ExtResource("1_mx8sn")
metadata/_edit_lock_ = true

[node name="Background" type="CanvasLayer" parent="." unique_id=826659039]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background" unique_id=2121256935]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="GameUI" parent="." unique_id=78439775 instance=ExtResource("3_w8frs")]
visible = false

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=958752710]
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AABJADcAAAAPABMAAABJADYAAAAPABEAAABIADcAAAAPABMAAABIADYAAAAPABEAAABHADcAAAAPABMAAABHADYAAAAPABEAAABGADcAAAAPABMAAABGADYAAAAPABEAAABFADcAAAAPABMAAABFADYAAAAPABEAAABEADcAAAAPABMAAABEADYAAAAPABEAAABDADcAAAAPABMAAABDADYAAAAPABEAAABCADcAAAAPABMAAABCADYAAAAPABEAAABBADcAAAAPABMAAABBADYAAAAPABEAAABAADcAAAAPABMAAABAADYAAAAPABEAAAA/ADcAAAAPABMAAAA/ADYAAAAPABEAAAA+ADcAAAAPABMAAAA+ADYAAAAPABEAAAA9ADcAAAAPABMAAAA9ADYAAAAPABEAAAA8ADcAAAAPABMAAAA8ADYAAAAPABEAAAA7ADcAAAAPABMAAAA7ADYAAAAPABEAAAA6ADcAAAAPABMAAAA6ADYAAAAPABEAAAA5ADcAAAAPABMAAAA5ADYAAAAPABEAAAA4ADcAAAAPABMAAAA4ADYAAAAPABEAAAA3ADcAAAAPABMAAAA3ADYAAAAPABEAAAA2ADcAAAAPABMAAAA2ADYAAAAPABEAAAA1ADcAAAAPABMAAAA1ADYAAAAPABEAAAA0ADcAAAAPABMAAAA0ADYAAAAPABEAAAAzADcAAAAPABMAAAAzADYAAAAPABEAAAAyADcAAAAPABMAAAAyADYAAAAPABEAAAAxADcAAAAPABMAAAAxADYAAAAPABEAAAAwADcAAAAPABMAAAAwADYAAAAPABEAAAAvADcAAAAPABMAAAAvADYAAAAPABEAAAAuADcAAAAPABMAAAAuADYAAAAPABEAAAAtADcAAAAPABMAAAAtADYAAAAPABEAAAAsADcAAAAPABMAAAAsADYAAAAPABEAAAArADcAAAAPABMAAAArADYAAAAPABEAAAAqADcAAAAPABMAAAAqADYAAAAPABEAAAApADcAAAAPABMAAAApADYAAAAPABEAAAAoADcAAAAPABMAAAAoADYAAAAPABEAAAAnADcAAAAPABMAAAAnADYAAAAPABEAAAAmADcAAAAPABMAAAAmADYAAAAPABEAAAAlADcAAAAPABMAAAAlADYAAAAPABEAAAAkADcAAAAPABMAAAAkADYAAAAPABEAAAAjADcAAAAPABMAAAAjADYAAAAPABEAAAAiADcAAAAPABMAAAAiADYAAAAPABEAAAAhADcAAAAPABMAAAAhADYAAAAPABEAAAAgADcAAAAPABMAAAAgADYAAAAPABEAAAAfADcAAAAPABMAAAAfADYAAAAPABEAAAAeADcAAAAPABMAAAAeADYAAAAPABEAAAAdADcAAAAPABMAAAAdADYAAAAPABEAAAAcADcAAAAPABMAAAAcADYAAAAPABEAAAAbADcAAAAPABMAAAAbADYAAAAPABEAAAAaADcAAAAPABMAAAAaADYAAAAPABEAAAAZADcAAAAPABMAAAAZADYAAAAPABEAAAAYADcAAAAPABMAAAAYADYAAAAPABEAAAAXADcAAAAPABMAAAAXADYAAAAPABEAAAAWADcAAAAPABMAAAAWADYAAAAPABEAAAAVADcAAAAPABMAAAAVADYAAAAPABEAAABjADcAAAAPABMAAABjADYAAAAPABEAAABiADcAAAAPABMAAABiADYAAAAPABEAAABhADcAAAAPABMAAABhADYAAAAPABEAAABgADcAAAAPABMAAABgADYAAAAPABEAAABfADcAAAAPABMAAABfADYAAAAPABEAAABeADcAAAAPABMAAABeADYAAAAPABEAAABdADcAAAAPABMAAABdADYAAAAPABEAAABcADcAAAAPABMAAABcADYAAAAPABEAAABbADcAAAAPABMAAABbADYAAAAPABEAAABaADcAAAAPABMAAABaADYAAAAPABEAAABZADcAAAAPABMAAABZADYAAAAPABEAAABYADcAAAAPABMAAABYADYAAAAPABEAAABXADcAAAAPABMAAABXADYAAAAPABEAAABWADcAAAAPABMAAABWADYAAAAPABEAAABVADcAAAAPABMAAABVADYAAAAPABEAAABUADcAAAAPABMAAABUADYAAAAPABEAAABTADcAAAAPABMAAABTADYAAAAPABEAAABSADcAAAAPABMAAABSADYAAAAPABEAAABRADcAAAAPABMAAABRADYAAAAPABEAAABQADcAAAAPABMAAABQADYAAAAPABEAAABPADcAAAAPABMAAABPADYAAAAPABEAAABOADcAAAAPABMAAABOADYAAAAPABEAAABNADcAAAAPABMAAABNADYAAAAPABEAAABMADcAAAAPABMAAABMADYAAAAPABEAAABLADcAAAAPABMAAABLADYAAAAPABEAAABKADcAAAAPABMAAABKADYAAAAPABEAAAABACIAAAAQABIAAAABACEAAAAQABIAAAABACAAAAAQABIAAAABAB8AAAAQABIAAAABAB4AAAAQABIAAAABAB0AAAAQABIAAAABABwAAAAQABIAAAABABsAAAAQABIAAAABABoAAAAQABIAAAABABkAAAAQABIAAAABABgAAAAQABIAAAABABcAAAAQABIAAAABABYAAAAQABIAAAABABUAAAAQABIAAAABABQAAAAQABIAAAABABMAAAAQABIAAAABABIAAAAQABIAAAABABEAAAAQABIAAAABABAAAAAQABIAAAABAA8AAAAQABIAAAABAA4AAAAQABIAAAABAA0AAAAQABIAAAABAAwAAAAQABIAAAABAAsAAAAQABIAAAABAAoAAAAQABIAAAABAAkAAAAQABIAAAABAAgAAAAQABIAAAABAAcAAAAQABIAAAABAAYAAAAQABIAAAABAAUAAAAQABIAAAABAAQAAAAQABIAAAABAAMAAAAQABIAAAABAAIAAAAQABIAAAABAAEAAAAPABIAAAABAAAAAAAPABEAAAAAACIAAAAOABIAAAAAACEAAAAOABIAAAAAACAAAAAOABIAAAAAAB8AAAAOABIAAAAAAB4AAAAOABIAAAAAAB0AAAAOABIAAAAAABwAAAAOABIAAAAAABsAAAAOABIAAAAAABoAAAAOABIAAAAAABkAAAAOABIAAAAAABgAAAAOABIAAAAAABcAAAAOABIAAAAAABYAAAAOABIAAAAAABUAAAAOABIAAAAAABQAAAAOABIAAAAAABMAAAAOABIAAAAAABIAAAAOABIAAAAAABEAAAAOABIAAAAAABAAAAAOABIAAAAAAA8AAAAOABIAAAAAAA4AAAAOABIAAAAAAA0AAAAOABIAAAAAAAwAAAAOABIAAAAAAAsAAAAOABIAAAAAAAoAAAAOABIAAAAAAAkAAAAOABIAAAAAAAgAAAAOABIAAAAAAAcAAAAOABIAAAAAAAYAAAAOABIAAAAAAAUAAAAOABIAAAAAAAQAAAAOABIAAAAAAAMAAAAOABIAAAAAAAIAAAAOABIAAAAAAAEAAAAOABIAAAAAAAAAAAAOABEAAACGADcAAAAQABMAAACGADYAAAAQABEAAACFADcAAAAPABMAAACFADYAAAAPABEAAACEADcAAAAPABMAAACEADYAAAAPABEAAACDADcAAAAPABMAAACDADYAAAAPABEAAACCADcAAAAPABMAAACCADYAAAAPABEAAACBADcAAAAPABMAAACBADYAAAAPABEAAACAADcAAAAPABMAAACAADYAAAAPABEAAAB/ADcAAAAPABMAAAB/ADYAAAAPABEAAAB+ADcAAAAPABMAAAB+ADYAAAAPABEAAAB9ADcAAAAPABMAAAB9ADYAAAAPABEAAAB8ADcAAAAPABMAAAB8ADYAAAAPABEAAAB7ADcAAAAPABMAAAB7ADYAAAAPABEAAAB6ADcAAAAPABMAAAB6ADYAAAAPABEAAAB5ADcAAAAPABMAAAB5ADYAAAAPABEAAAB4ADcAAAAPABMAAAB4ADYAAAAPABEAAAB3ADcAAAAPABMAAAB3ADYAAAAPABEAAAB2ADcAAAAPABMAAAB2ADYAAAAPABEAAAB1ADcAAAAPABMAAAB1ADYAAAAPABEAAAB0ADcAAAAPABMAAAB0ADYAAAAPABEAAABzADcAAAAPABMAAABzADYAAAAPABEAAAByADcAAAAPABMAAAByADYAAAAPABEAAABxADcAAAAPABMAAABxADYAAAAPABEAAABwADcAAAAPABMAAABwADYAAAAPABEAAABvADcAAAAPABMAAABvADYAAAAPABEAAABuADcAAAAPABMAAABuADYAAAAPABEAAABtADcAAAAPABMAAABtADYAAAAPABEAAABsADcAAAAPABMAAABsADYAAAAPABEAAABrADcAAAAPABMAAABrADYAAAAPABEAAABqADcAAAAPABMAAABqADYAAAAPABEAAABpADcAAAAPABMAAABpADYAAAAPABEAAABoADcAAAAPABMAAABoADYAAAAPABEAAABnADcAAAAPABMAAABnADYAAAAPABEAAABmADcAAAAPABMAAABmADYAAAAPABEAAABlADcAAAAPABMAAABlADYAAAAPABEAAABkADcAAAAPABMAAABkADYAAAAPABEAAAAUADcAAAAPABMAAAAUADYAAAAPABEAAAATADcAAAAPABMAAAATADYAAAAPABEAAAASADcAAAAPABMAAAASADYAAAAPABEAAAARADcAAAAPABMAAAARADYAAAAPABEAAAAQADcAAAAPABMAAAAQADYAAAAPABEAAAAPADcAAAAPABMAAAAPADYAAAAPABEAAAAOADcAAAAPABMAAAAOADYAAAAPABEAAAANADcAAAAPABMAAAANADYAAAAPABEAAAAMADcAAAAPABMAAAAMADYAAAAPABEAAAALADcAAAAPABMAAAALADYAAAAPABEAAAAKADcAAAAPABMAAAAKADYAAAAPABEAAAAJADcAAAAPABMAAAAJADYAAAAPABEAAAAIADcAAAAPABMAAAAIADYAAAAPABEAAAAHADcAAAAPABMAAAAHADYAAAAPABEAAAAGADcAAAAPABMAAAAGADYAAAAPABEAAAAFADcAAAAPABMAAAAFADYAAAAPABEAAAAEADcAAAAPABMAAAAEADYAAAAPABEAAAADADcAAAAPABMAAAADADYAAAAPABEAAAACADcAAAAPABMAAAACADYAAAAPABEAAAABADcAAAAPABMAAAABADYAAAAPABIAAAABADUAAAAQABIAAAABADQAAAAQABIAAAABADMAAAAQABIAAAABADIAAAAQABIAAAABADEAAAAQABIAAAABADAAAAAQABIAAAABAC8AAAAQABIAAAABAC4AAAAQABIAAAABAC0AAAAQABIAAAABACwAAAAQABIAAAABACsAAAAQABIAAAABACoAAAAQABIAAAABACkAAAAQABIAAAABACgAAAAQABIAAAABACcAAAAQABIAAAABACYAAAAQABIAAAABACUAAAAQABIAAAABACQAAAAQABIAAAABACMAAAAQABIAAAAAADcAAAAOABMAAAAAADYAAAAOABIAAAAAADUAAAAOABIAAAAAADQAAAAOABIAAAAAADMAAAAOABIAAAAAADIAAAAOABIAAAAAADEAAAAOABIAAAAAADAAAAAOABIAAAAAAC8AAAAOABIAAAAAAC4AAAAOABIAAAAAAC0AAAAOABIAAAAAACwAAAAOABIAAAAAACsAAAAOABIAAAAAACoAAAAOABIAAAAAACkAAAAOABIAAAAAACgAAAAOABIAAAAAACcAAAAOABIAAAAAACYAAAAOABIAAAAAACUAAAAOABIAAAAAACQAAAAOABIAAAAAACMAAAAOABIAAABUAAEAAAAPABMAAABUAAAAAAAPABEAAABTAAEAAAAPABMAAABTAAAAAAAPABEAAABSAAEAAAAPABMAAABSAAAAAAAPABEAAABRAAEAAAAPABMAAABRAAAAAAAPABEAAABQAAEAAAAPABMAAABQAAAAAAAPABEAAABPAAEAAAAPABMAAABPAAAAAAAPABEAAABOAAEAAAAPABMAAABOAAAAAAAPABEAAABNAAEAAAAPABMAAABNAAAAAAAPABEAAABMAAEAAAAPABMAAABMAAAAAAAPABEAAABLAAEAAAAPABMAAABLAAAAAAAPABEAAABKAAEAAAAPABMAAABKAAAAAAAPABEAAABJAAEAAAAPABMAAABJAAAAAAAPABEAAABIAAEAAAAPABMAAABIAAAAAAAPABEAAABHAAEAAAAPABMAAABHAAAAAAAPABEAAABGAAEAAAAPABMAAABGAAAAAAAPABEAAABFAAEAAAAPABMAAABFAAAAAAAPABEAAABEAAEAAAAPABMAAABEAAAAAAAPABEAAABDAAEAAAAPABMAAABDAAAAAAAPABEAAABCAAEAAAAPABMAAABCAAAAAAAPABEAAABBAAEAAAAPABMAAABBAAAAAAAPABEAAABAAAEAAAAPABMAAABAAAAAAAAPABEAAAA/AAEAAAAPABMAAAA/AAAAAAAPABEAAAA+AAEAAAAPABMAAAA+AAAAAAAPABEAAAA9AAEAAAAPABMAAAA9AAAAAAAPABEAAAA8AAEAAAAPABMAAAA8AAAAAAAPABEAAAA7AAEAAAAPABMAAAA7AAAAAAAPABEAAAA6AAEAAAAPABMAAAA6AAAAAAAPABEAAAA5AAEAAAAPABMAAAA5AAAAAAAPABEAAAA4AAEAAAAPABMAAAA4AAAAAAAPABEAAAA3AAEAAAAPABMAAAA3AAAAAAAPABEAAAA2AAEAAAAPABMAAAA2AAAAAAAPABEAAAA1AAEAAAAPABMAAAA1AAAAAAAPABEAAAA0AAEAAAAPABMAAAA0AAAAAAAPABEAAAAzAAEAAAAPABMAAAAzAAAAAAAPABEAAAAyAAEAAAAPABMAAAAyAAAAAAAPABEAAAAxAAEAAAAPABMAAAAxAAAAAAAPABEAAAAwAAEAAAAPABMAAAAwAAAAAAAPABEAAAAvAAEAAAAPABMAAAAvAAAAAAAPABEAAAAuAAEAAAAPABMAAAAuAAAAAAAPABEAAAAtAAEAAAAPABMAAAAtAAAAAAAPABEAAAAsAAEAAAAPABMAAAAsAAAAAAAPABEAAAArAAEAAAAPABMAAAArAAAAAAAPABEAAAAqAAEAAAAPABMAAAAqAAAAAAAPABEAAAApAAEAAAAPABMAAAApAAAAAAAPABEAAAAoAAEAAAAPABMAAAAoAAAAAAAPABEAAAAnAAEAAAAPABMAAAAnAAAAAAAPABEAAAAmAAEAAAAPABMAAAAmAAAAAAAPABEAAAAlAAEAAAAPABMAAAAlAAAAAAAPABEAAAAkAAEAAAAPABMAAAAkAAAAAAAPABEAAAAjAAEAAAAPABMAAAAjAAAAAAAPABEAAAAiAAEAAAAPABMAAAAiAAAAAAAPABEAAAAhAAEAAAAPABMAAAAhAAAAAAAPABEAAAAgAAEAAAAPABMAAAAgAAAAAAAPABEAAAAfAAEAAAAPABMAAAAfAAAAAAAPABEAAAAeAAEAAAAPABMAAAAeAAAAAAAPABEAAAAdAAEAAAAPABMAAAAdAAAAAAAPABEAAAAcAAEAAAAPABMAAAAcAAAAAAAPABEAAAAbAAEAAAAPABMAAAAbAAAAAAAPABEAAAAaAAEAAAAPABMAAAAaAAAAAAAPABEAAAAZAAEAAAAPABMAAAAZAAAAAAAPABEAAAAYAAEAAAAPABMAAAAYAAAAAAAPABEAAAAXAAEAAAAPABMAAAAXAAAAAAAPABEAAAAWAAEAAAAPABMAAAAWAAAAAAAPABEAAAAVAAEAAAAPABMAAAAVAAAAAAAPABEAAAAUAAEAAAAPABMAAAAUAAAAAAAPABEAAAATAAEAAAAPABMAAAATAAAAAAAPABEAAAASAAEAAAAPABMAAAASAAAAAAAPABEAAAARAAEAAAAPABMAAAARAAAAAAAPABEAAAAQAAEAAAAPABMAAAAQAAAAAAAPABEAAAAPAAEAAAAPABMAAAAPAAAAAAAPABEAAAAOAAEAAAAPABMAAAAOAAAAAAAPABEAAAANAAEAAAAPABMAAAANAAAAAAAPABEAAAAMAAEAAAAPABMAAAAMAAAAAAAPABEAAAALAAEAAAAPABMAAAALAAAAAAAPABEAAAAKAAEAAAAPABMAAAAKAAAAAAAPABEAAAAJAAEAAAAPABMAAAAJAAAAAAAPABEAAAAIAAEAAAAPABMAAAAIAAAAAAAPABEAAAAHAAEAAAAPABMAAAAHAAAAAAAPABEAAAAGAAEAAAAPABMAAAAGAAAAAAAPABEAAAAFAAEAAAAPABMAAAAFAAAAAAAPABEAAAAEAAEAAAAPABMAAAAEAAAAAAAPABEAAAADAAEAAAAPABMAAAADAAAAAAAPABEAAAACAAEAAAAPABMAAAACAAAAAAAPABEAAACGAAEAAAAQABMAAACGAAAAAAAQABEAAACFAAEAAAAPABMAAACFAAAAAAAPABEAAACEAAEAAAAPABMAAACEAAAAAAAPABEAAACDAAEAAAAPABMAAACDAAAAAAAPABEAAACCAAEAAAAPABMAAACCAAAAAAAPABEAAACBAAEAAAAPABMAAACBAAAAAAAPABEAAACAAAEAAAAPABMAAACAAAAAAAAPABEAAAB/AAEAAAAPABMAAAB/AAAAAAAPABEAAAB+AAEAAAAPABMAAAB+AAAAAAAPABEAAAB9AAEAAAAPABMAAAB9AAAAAAAPABEAAAB8AAEAAAAPABMAAAB8AAAAAAAPABEAAAB7AAEAAAAPABMAAAB7AAAAAAAPABEAAAB6AAEAAAAPABMAAAB6AAAAAAAPABEAAAB5AAEAAAAPABMAAAB5AAAAAAAPABEAAAB4AAEAAAAPABMAAAB4AAAAAAAPABEAAAB3AAEAAAAPABMAAAB3AAAAAAAPABEAAAB2AAEAAAAPABMAAAB2AAAAAAAPABEAAAB1AAEAAAAPABMAAAB1AAAAAAAPABEAAAB0AAEAAAAPABMAAAB0AAAAAAAPABEAAABzAAEAAAAPABMAAABzAAAAAAAPABEAAAByAAEAAAAPABMAAAByAAAAAAAPABEAAABxAAEAAAAPABMAAABxAAAAAAAPABEAAABwAAEAAAAPABMAAABwAAAAAAAPABEAAABvAAEAAAAPABMAAABvAAAAAAAPABEAAABuAAEAAAAPABMAAABuAAAAAAAPABEAAABtAAEAAAAPABMAAABtAAAAAAAPABEAAABsAAEAAAAPABMAAABsAAAAAAAPABEAAABrAAEAAAAPABMAAABrAAAAAAAPABEAAABqAAEAAAAPABMAAABqAAAAAAAPABEAAABpAAEAAAAPABMAAABpAAAAAAAPABEAAABoAAEAAAAPABMAAABoAAAAAAAPABEAAABnAAEAAAAPABMAAABnAAAAAAAPABEAAABmAAEAAAAPABMAAABmAAAAAAAPABEAAABlAAEAAAAPABMAAABlAAAAAAAPABEAAABkAAEAAAAPABMAAABkAAAAAAAPABEAAABjAAEAAAAPABMAAABjAAAAAAAPABEAAABiAAEAAAAPABMAAABiAAAAAAAPABEAAABhAAEAAAAPABMAAABhAAAAAAAPABEAAABgAAEAAAAPABMAAABgAAAAAAAPABEAAABfAAEAAAAPABMAAABfAAAAAAAPABEAAABeAAEAAAAPABMAAABeAAAAAAAPABEAAABdAAEAAAAPABMAAABdAAAAAAAPABEAAABcAAEAAAAPABMAAABcAAAAAAAPABEAAABbAAEAAAAPABMAAABbAAAAAAAPABEAAABaAAEAAAAPABMAAABaAAAAAAAPABEAAABZAAEAAAAPABMAAABZAAAAAAAPABEAAABYAAEAAAAPABMAAABYAAAAAAAPABEAAABXAAEAAAAPABMAAABXAAAAAAAPABEAAABWAAEAAAAPABMAAABWAAAAAAAPABEAAABVAAEAAAAPABMAAABVAAAAAAAPABEAAAA=")
tile_set = ExtResource("1_w7c3h")
metadata/_edit_lock_ = true

[node name="Killzone" parent="." unique_id=2135191917 instance=ExtResource("3_mx8sn")]
position = Vector2(0, 900)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone" unique_id=1560501021]
shape = SubResource("WorldBoundaryShape2D_mx8sn")

[node name="PlayerSpawn" type="Marker2D" parent="." unique_id=1965159773]
position = Vector2(64, 836)

[node name="CameraLimit" type="Marker2D" parent="." unique_id=715383170]

[node name="LevelGoal" parent="." unique_id=256670110 instance=ExtResource("5_dxsyt")]
z_index = -1
position = Vector2(384, 864)
